# multibinit-lammps

./: CMakeLists.txt  README.md  USER_GUIDE.md
docs/: tutorial.md
examples/: README.md  in.bahfo3_nve  in.bahfo3_nvt  in.bho_md  in.bho_test  in.bho_xml  in.npt_harmonic  in.nve_test  in.nvt_test
scripts/: hist2lammps.py
src/: multibinitplugin.cpp  pair_multibinit.cpp  pair_multibinit.h
